horizontal scroll bug fixed

--- a/automobile_industry_analysis/src/components/CSS/Prediction.css
+++ b/automobile_industry_analysis/src/components/CSS/Prediction.css
@@ -55,7 +55,8 @@
 }
 .prediction_input_container{
     /* background-color: pink; */
-    max-width: 20vw;
+    width: 19vw;
+    max-width: 18vw;
     box-sizing: border-box;
 }
 .prediction_heading{
